[gd_scene load_steps=5 format=3 uid="uid://bnifhivtytb76"]

[ext_resource type="Script" path="res://scenes/weasel_den.gd" id="1_d81xs"]
[ext_resource type="Texture2D" uid="uid://cn6ebn300pr1e" path="res://assets/sprites/weasel_den.png" id="1_wdqhy"]
[ext_resource type="PackedScene" uid="uid://bkvwxlaf6o3n0" path="res://scenes/weasel.tscn" id="2_kbbp2"]
[ext_resource type="PackedScene" uid="uid://ccjbkmd2fo5a6" path="res://scenes/tile_map_detection_area.tscn" id="3_vwkeo"]

[node name="WeaselDen" type="StaticBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_d81xs")
weasel_template = ExtResource("2_kbbp2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wdqhy")
offset = Vector2(0, -6)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -6, 12, 0, 0, 6, -12, 0)

[node name="TileMapDetectionArea" parent="." node_paths=PackedStringArray("root_node") instance=ExtResource("3_vwkeo")]
root_node = NodePath("..")
display_outline = false

[node name="SpawnTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="on_spawn_timer_timeout"]
